issues_96 All Locations - Checkbox selection is not visible

--- a/src/themes/light-theme.scss
+++ b/src/themes/light-theme.scss
@@ -58,3 +58,8 @@ $app-bg-color: white;
   @include angular-material-theme($light-theme);
   @include light-app-colors
 }
+
+.light-theme .mat-checkbox-checked.mat-primary .mat-checkbox-background,
+.light-theme .mat-checkbox-indeterminate.mat-primary .mat-checkbox-background {
+  background-color: rgb(163, 174, 224);
+}
